[metadata]
description = 'Online judge aware Rust IDE'
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: GUI
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Utilities

[options]
install_requires =
    PyQt5
    PyQtWebEngine
    pytest-qt
    pexpect
    online-judge-tools
scripts =
    rujaion/rujaion_main.py
packages = find:

