[metadata]
description = 'Online judge aware Rust IDE'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Topic :: Software Development
    Topic :: Utilities
